# weather

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  main.py  requirements.txt  setup.cfg  test  tox.ini
.github/: release-drafter.yml
.github/workflows/: ci.yml  deploy.yml  main.yml  release-drafter.yml  tests.yml
docs/: conf.py  index.rst
requirements/: base.txt  test.txt
tests/: mixed_response.json  test_main.py
tests/unit/: test_api_connector.py  test_cli.py  test_main.py
tests/unit/fixtures/: full_rainy_response.json  full_sunny_response.json
weather/: __main__.py  api_connector.py  cli.py  exceptions.py
