[metadata]
name = weather
description = A simple CLI to know whether or not it is going to rain today
version = 0.1.0
author = Thomas PERROT
url = https://github.com/thomasperrot/weather
long_description = file: README.md
long_description_content_type='text/markdown'
keywords =
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    requests==2.22.0
    click==7.0

[options.extras_require]
dev =
    tox
    black
    isort

test =
    pytest
    pytest-cov

lint =
    black
    flake8
    isort
    mypy
    check-manifest

docs =
    doc8
    sphinx

[options.packages.find]
include =
    weather
    weather.*

[options.entry_points]
console_scripts =
    weather = weather.cli:main

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
not_skip = __init__.py

[flake8]
max-line-length = 88

[doc8]
max-line-length=88
ignore-path=docs/_build

[mypy]
files =
    weather,
    docs,
    tests

[mypy-pytest]
ignore_missing_imports = True

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=weather -vv --strict-markers -rfE
testpaths =
    tests/unit
